# cs372-dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
src/: lib.rs  main.rs  routes.rs  server.rs
src/pages/: homepage.rs  landing.rs  mod.rs
