[package]
name = "cs372-dioxus"
version = "0.1.0"
authors = ["kaleb <kaleb.r.burris@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.5.1", features = ["fullstack", "router"] }
manganis = "0.2.2"
chrono = { version = "0.4.37", features = ["serde"] }

# Server dependencies
surrealdb = { version = "1.3.1", optional = true }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"], optional = true }

[features]
web = ["dioxus/web"]
server = ["dioxus/axum", "dep:surrealdb", "dep:tokio"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false
panic = "abort"

[profile.dev]
incremental = true
lto = false
